Remove the now ignored directory node_modules

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <footer></footer>
   <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="js/search.js"></script>
-  <script src="js/pathfinder.js"></script>
+  <script src="minjs/search.js"></script>
+  <script src="minjs/pathfinder.js"></script>
 </body>
 </html>
