--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Pathfinder</title>
-  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather:700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="https://use.fontawesome.com/5b76e3c014.js"></script>
@@ -30,7 +31,7 @@
 
   </div>
   <footer></footer>
-  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
   <script src="minjs/search.js"></script>
   <script src="minjs/pathfinder.js"></script>
 </body>
